<resources>
    <string name="app_name">MeraCampus</string>
    <string name="title_items_detail">Items Detail</string>
    <string name="title_activity_boot_screen">BootScreen</string>
    <string name="about_us">This AICTE approved Institute under GGSIP University is ideally located in the Institutional area of Janakpuri, New Delhi. It has a campus spread over eight acres of land with beautiful eco-friendly surroundings.</string>
    <string name="about_us_2">Maharaja Surajmal was born in 1707 in the erstwhile kingdom of Bharatpur. Surajmal was the most able son of Badan Singh. Badan Singh and his young son Surajmal through unity and integrity brought strength to the kingdom.</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_registeration">RegisterationActivity</string>
    <string name="registration">Registration</string>
    <string name="username">User Name</string>
    <string name="email">Email ID</string>
    <string name="mobile">Mobile Number</string>
    <string name="password">Password</string>
    <string name="enroll">Unique Identity Acess Key</string>
    <string name="course">Course</string>
    <string name="semester">Semester</string>
    <string name="register">Register</string>
    <string-array name="semesters">
        <item name="null">--</item>
        <item name="1">1</item>
        <item name="2">2</item>
    </string-array>
    <string-array name="courses">
        <item name="null">--</item>
        <item name="mba">MBA</item>
        <item name="Btech">Btech</item>
    </string-array>
<string name="assess_prompt">Assesment</string>
<string-array name="assess_arrays">
    <item name="go">--Go--</item>
    <item name="attendance">Attendance</item>
    <item name="marks">Marks</item>
    <item name="rank_evaluator">Rank Evaluator</item>
</string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_teacher_review">TeacherReviewActivity</string>
    <string name="title_activity_teacher_view">TeacherViewActivity</string>
    <string name="title_activity_chat_view">ChatViewActivity</string>
    <string name="title_activity_add_notes">AddNotesActivity</string>
    <string name="title_activity_view_notes">ViewNotesActivity</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_notes_view_activtiy">NotesViewActivtiy</string>
    <string name="title_activity_news_and_events">NewsAndEventsActivity</string>
    <string name="title_activity_societies">SocietiesActivity</string>
    <string name="title_activity_assesment">AssesmentActivity</string>

</resources>
