<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hellooo"
    android:weightSum="9"
    android:paddingLeft="40dp"
    android:paddingTop="40dp"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/registration"
        android:textSize="35dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:id="@+id/tvReg"
        android:layout_marginTop="35dp"
        android:textColor="#f901340b"/>
    <EditText
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/etUserName"
        android:layout_marginLeft="20dp"
        android:singleLine="true"/>
    <EditText
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:id="@+id/etMail"
        android:layout_marginLeft="20dp"
        android:singleLine="true"/>
    <EditText
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/mobile"
        android:id="@+id/etMob"
        android:layout_marginLeft="20dp"
        android:singleLine="true"/>
    <EditText
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Enrollment no."
        android:id="@+id/etEnroll"
        android:layout_marginLeft="20dp"
        android:singleLine="true"/>
    <EditText
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:id="@+id/etPass"
        android:layout_marginLeft="20dp"
        android:singleLine="true"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="2"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register As:"
            android:id="@+id/tvRegister"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"/>

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/radioUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/teacher"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:text="teacher"
                android:checked="false"
                android:textSize="20dp"
                android:layout_marginTop="10dp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:checked="false"
                android:textColor="#000"
                android:text="student"
                android:textSize="20dp"
                android:layout_weight="10"
                android:layout_marginTop="10dp" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bReg" />

</LinearLayout>